tattoo work / user report components added, city and countries retrieved from an api
